Update gitignore with broadcast files

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ out/
 # Coverage reports
 lcov.info
 coverage/
+
+# Ignores development broadcast logs
+!/broadcast
+/broadcast/*/31337/
+/broadcast/**/dry-run/
