--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@coinbase/onchainkit": "latest",
     "@tanstack/react-query": "^5.81.5",
+    "ethers": "^6.15.0",
     "next": "15.3.4",
     "react": "^19.0.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
     "viem": "^2.31.6",
     "wagmi": "^2.16.3"
