--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "latest",
+    "@farcaster/miniapp-sdk": "^0.2.1",
     "@tanstack/react-query": "^5.81.5",
     "ethers": "^6.15.0",
     "next": "15.3.4",
